force-app/main/default/objects/Flow_Decision_Path_Variables__c/Flow_Decision_Path_Variables__c.object-meta.xml
<CustomObject>
    <label>Flow Decision Path Variables</label>
    <nameField>
        <label>Flow Decision Path Vairables Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Decision Path Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>