force-app/main/default/objects/Flow_Decision_Path_Variables__c/fields/Check_for_Task_Creation__c.field-meta.xml
<CustomField>
    <fullName>Check_for_Task_Creation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if the variable is true then the path to create the task will get executed</description>
    <inlineHelpText>if the variable is true then the path to create the task will get executed</inlineHelpText>
    <label>Check_for_Task_Creation</label>
    <type>Checkbox</type>
</CustomField>