force-app/main/default/objects/Flow_Decision_Path_Variables__c/fields/EmailToCase_Discarded_Mail_ID__c.field-meta.xml
<CustomField>
    <fullName>EmailToCase_Discarded_Mail_ID__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EmailToCase Discarded Mail ID</label>
    <type>Checkbox</type>
</CustomField>