force-app/main/default/objects/Flow_Decision_Path_Variables__c/fields/Notify_Email_Reply__c.field-meta.xml
<CustomField>
    <fullName>Notify_Email_Reply__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notify Email Reply</label>
    <type>Checkbox</type>
</CustomField>