force-app/main/default/objects/Flow_Decision_Path_Variables__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_for_Task_Creation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>